--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
      <div class="container text-center">
          <div class="row justify-content-space-between">
            <div class="col-md-6 col-sm-12 align-left">
-               <h3 class="inner-text mbr-fonts-style content-text display-7"><strong>© 2021 Crafelo Studio</strong></h3>
+               <h3 class="inner-text mbr-fonts-style content-text display-7"><strong>© 2021 Crafelo Studio Limited</strong></h3>
            </div>
            
   </div>
